# saga

./: .gitignore  pyproject.toml
examples/: event_saga.py  nested_sagas.py  rerun_after_failure.py  simple_saga.py
saga/: __init__.py  compensator.py  events.py  journal.py  logger.py  memo.py  models.py  runner.py  saga.py  worker.py  worker_job.py
tests/: conftest.py  test_compensator.py  test_journal.py  test_memo.py  test_saga_job.py  test_saga_job_creation.py  test_saga_job_init.py  test_saga_job_run.py  test_saga_participant.py  test_saga_runner.py  test_saga_worker.py  test_worker_job.py
